Fixed images on mobile, small content updates

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,31 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+// and image with right alignment
+.image-right {
+  float: right;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  width: 50%;
+}
+// full width on mobile and not floating
+@media (max-width: 768px) {
+  .image-right {
+    float: none;
+    width: 98%;
+    margin-left: none;
+  }
+}
+
+.image-left {
+  float: left;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .image-left {
+    float: none;
+    width: 100%;
+  }
+}
